17060
Worked in 2.9.
```

scala> new xml.Elem(null, null, xml.Null, xml.TopScope, Nil: _*)
<console>:8: error: ambiguous reference to overloaded definition,
both constructor Elem in class Elem of type (prefix: String, label: String, attributes: scala.xml.MetaData, scope: scala.xml.NamespaceBinding, child: scala.xml.Node*)scala.xml.Elem
and  constructor Elem in class Elem of type (prefix: String, label: String, attributes1: scala.xml.MetaData, scope: scala.xml.NamespaceBinding, minimizeEmpty: Boolean, child: scala.xml.Node*)scala.xml.Elem
match argument types (Null,Null,xml.Null.type,xml.TopScope.type,Nothing)
              new xml.Elem(null, null, xml.Null, xml.TopScope, Nil: _*)
              ^
```
